# AP4CA

./: LICENSE.md  MyBERT-confidence-interval-computing-build-step.ipynb  MyBERT_for_AP4CA_on_TPU.ipynb  README.md  log.txt  log1.txt  mybert_for_ap4ca_on_tpu.py
ap4ca/: __init__.py  run.py
ap4ca/model/: __init__.py  model.py  runner.py  utils.py
ap4ca/results/: classes-20210829-020150  classes-20210829-081353  data_analysis.ipynb  eval-20210828-114445  eval-20210828-134303  eval-20210828-135516  eval-20210828-150402  eval-20210828-153524  eval-20210828-163541  eval-20210828-173521  eval-20210828-185724  eval-20210828-203152  eval-20210828-205725  eval-20210828-224851  eval-20210828-230723  eval-20210829-005150  eval-20210829-010001  eval-20210829-015417  eval-20210829-020150  eval-20210829-024831  eval-20210829-030215  eval-20210829-034246  eval-20210829-043659  eval-20210829-053113  eval-20210829-062526  eval-20210829-071940  eval-20210829-081353  eval-20210829-085441  eval-20210829-090811  eval-20210829-095513  eval-20210829-100232  eval-20210829-105649  eval-20210829-115107  eval-20210829-124525  eval-20210829-133944  eval-20210829-143402  eval-20210829-152820  flags-20210828-114445  flags-20210828-134303  flags-20210828-185724  (+39 more)
ap4ca/simmc/: __init__.py
package/: LICENSE  README.md  condalist.txt  pyproject.toml  requirements.txt  setup.cfg
package/src/ap4ca/: flags.py  run.py
package/src/ap4ca/model/: flags.py  loaders.py  model.py  runner.py  utils.py
package/src/ap4ca/simmc/: flags.py  utils.py
sampler/: sampler_on_tpu.py
