[metadata]
name = ap4ca
version = 0.0.1
author = Cravero Giovanni, Dosualdo Eugenio, Rondina Marco
author_email = giovanni.cravero@studenti.polito.it
description = Action Prediction for Conversational Agents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmcrav/AP4CA
project_urls =
    Bug Tracker = https://github.com/jmcrav/AP4CA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
